cabal-version:      3.0
name:               reactimate-game
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
data-files: shaders

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        OverloadedRecordDot
        DuplicateRecordFields
        LambdaCase
    build-depends:    
        base ^>=4.17.2.1,
        vector,
        linear,
        text,
        colour,
        sdl2

library
    import:           common
    other-modules:      Paths_reactimate_game
    autogen-modules:    Paths_reactimate_game
    exposed-modules:  
        Reactimate.Game,
        Reactimate.Game.Setup,
        Reactimate.Game.Graphics,
        Reactimate.Game.Projection2D,
        Reactimate.Game.Shapes,
        Reactimate.Game.Input,
        Reactimate.Game.Environment,
        Reactimate.Game.Assets,
        Reactimate.Game.Tasks,
        Reactimate.Game.Physics2D
        
    hs-source-dirs:   src
    build-depends:
        sdl2-gfx,
        sdl2-image,
        containers,
        pqueue,
        reactimate,
        text,
        filepath,
        hashtables,
        hashable,
        chiphunk,
        StateVar

executable basic-example
    import: common
    main-is: Main.hs
    hs-source-dirs: examples/basic-example
    build-depends:
        reactimate,
        reactimate-game

executable mouse-example
    import: common
    main-is: Main.hs
    hs-source-dirs: examples/mouse-example
    build-depends:
        reactimate,
        reactimate-game

executable image-example
    import: common
    main-is: Main.hs
    hs-source-dirs: examples/image-example
    build-depends:
        reactimate,
        reactimate-game

executable snake-example
    import: common
    main-is: Main.hs
    hs-source-dirs: examples/snake-example
    build-depends:
        reactimate,
        reactimate-game,
        containers

executable physics-example
    import: common
    main-is: Main.hs
    hs-source-dirs: examples/physics-example
    build-depends:
        reactimate,
        reactimate-game

executable physics-example-subspaces
    import: common
    main-is: Main.hs
    hs-source-dirs: examples/physics-example-subspaces
    build-depends:
        reactimate,
        reactimate-game

executable bench
    import: common
    main-is: Main.hs
    hs-source-dirs: bench
    build-depends:
        reactimate,
        reactimate-game,
        gauge


test-suite reactimate-game-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        reactimate-game
