cabal-version:      3.0
name:               reactimate
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        DataKinds
    build-depends:    
        base >=4.17.2.1

library
    import: common
    exposed-modules:  
        Reactimate,
        Reactimate.Signal,
        Reactimate.Run,
        Reactimate.Time,
        Reactimate.Sampling,
        Reactimate.Stateful,
        Reactimate.Switching,
        Reactimate.Setup,
        Reactimate.Basic,
        Reactimate.Event,
        Reactimate.Delay,
        Reactimate.Random
    hs-source-dirs:   src
    ghc-options: -O2
    build-depends: 
        containers,
        vector,
        async,
        random

executable bench
    import: common
    build-depends:
        reactimate,
        Yampa,
        dunai,
        gauge
    hs-source-dirs:   bench
    main-is: Main.hs
    ghc-options: -O2
